# MyRenderer

./: .editorconfig  .gitmodules  CMakePresets.json  Readme.md
CMakeProject1/: .gitignore  CMakeLists.txt  Main.cpp
CMakeProject1/kamanri/implements/maths/: matrix.cpp  vector.cpp
CMakeProject1/kamanri/implements/renderer/: obj_reader.cpp
CMakeProject1/kamanri/implements/utils/: result.cpp  string.cpp  thread.cpp
CMakeProject1/kamanri/implements/windows/: windows.cpp
CMakeProject1/kamanri/maths/: matrix.h  vectors.h
CMakeProject1/kamanri/renderer/: obj_reader.h
CMakeProject1/kamanri/utils/: logs.h  memory.h  result.h  thread.h
CMakeProject1/mylibs/: mylog.h  mymatrix.h  mymemory.h  myresult.h  mythread.h  myvector.h
CMakeProject1/mylibs/implements/: geometry.cpp  log.cpp  matrix.cpp  mylog.cpp  mymatrix.cpp  myresult.cpp  mythread.cpp  myvector.cpp  result.cpp  tgaimage.cpp  thread.cpp  vector.cpp  window.cpp
CMakeProject1/mylibs/maths/: matrix.h  vector.h
CMakeProject1/mylibs/utils/: result.h  thread.h
CMakeProject1/mylibs/window/: window.h
CMakeProject1/renderers/: line.h  models.h
CMakeProject1/renderers/implements/: line.cpp  model.cpp
MyRenderer/: .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp
MyRenderer/cuda_dll/: CMakeLists.txt  foo.hpp
MyRenderer/cuda_dll/exports/: build_world.hpp  memory_operations.hpp  set_log_level.hpp  write_to_buffers.hpp
MyRenderer/cuda_dll/src/: build_world.cuh  foo.cuh  memory_operations.cuh  set_log_level.cuh  write_to_buffers.cuh
MyRenderer/cuda_dll/src/implementations/: build_world.cu  build_world.impl.cuh  implementation.cu  memory_operations.impl.cuh
MyRenderer/cuda_dll/src/implementations/maths/: all.impl.cuh  matrix.impl.cuh  vector.impl.cuh
MyRenderer/cuda_dll/src/implementations/renderer/: all.impl.cuh  tga_image.impl.cuh
MyRenderer/cuda_dll/src/implementations/renderer/world/: all.impl.cuh  bling_phong_reflection_model.impl.cuh  blinn_phong_reflection_model.impl.cuh  world3d.impl.cuh
MyRenderer/cuda_dll/src/implementations/renderer/world/__/: all.impl.cuh  bounding_box.impl.cuh  buffers.impl.cuh  triangle3d.impl.cuh
MyRenderer/cuda_dll/src/implementations/utils/: all.impl.cuh  cuda_thread_config.cu  cuda_thread_config.impl.cuh  logs.impl.cuh
MyRenderer/cuda_dll/src/implements/: build_world.cu  foo.cu  memory_operations.cu  set_log_level.cpp  set_log_level.cu  write_to_buffers.cu
MyRenderer/cuda_dll/src/implements/utils/: cuda_thread_config.cu
MyRenderer/cuda_dll/src/utils/: cuda_error_check.cuh  cuda_thread_config.cuh  log.cuh  logs.cuh
MyRenderer/kamanri/: all.hpp  maths.i  renderer.i  types.i.hpp  utils.i  windows.i
MyRenderer/kamanri/implementations/maths/: matrix.cpp  smatrix.cpp  vector.cpp
MyRenderer/kamanri/implementations/renderer/: obj_model.cpp  tga_image.cpp
MyRenderer/kamanri/implementations/renderer/world/: bling_phong_reflection_model.cpp  blinn_phong_reflection_model.cpp  camera.cpp  object.cpp  world3d.cpp
MyRenderer/kamanri/implementations/renderer/world/__/: bounding_box.cpp  buffers.cpp  environment.cpp  triangle3d.cpp
MyRenderer/kamanri/implementations/utils/: log.cpp  logs.cpp  result.cpp  thread.cpp
MyRenderer/kamanri/implementations/window_procedures/wingdi_window/: move_position_procedure.cpp  update_procedure.cpp
MyRenderer/kamanri/implementations/windows/: wingdi_window.cpp
MyRenderer/kamanri/implements/maths/: matrix.cpp  vector.cpp
MyRenderer/kamanri/implements/renderer/: cameras.cpp  obj_model.cpp  obj_reader.cpp  tga_image.cpp  triangle3ds.cpp  world3d.cpp  world3ds.cpp
MyRenderer/kamanri/implements/renderer/world/: bling_phong_reflection_model.cpp  camera.cpp  object.cpp  world3d.cpp
MyRenderer/kamanri/implements/renderer/world/__/: buffers.cpp  environment.cpp  triangle3d.cpp
MyRenderer/kamanri/implements/utils/: logs.cpp  result.cpp  string.cpp  thread.cpp
MyRenderer/kamanri/implements/windows/: painter.cpp  painter_factor.cpp  window.cpp  windows.cpp  wingdi_window.cpp
MyRenderer/kamanri/maths/: all.hpp  math.hpp  matrix.h  matrix.hpp  smatrix$.hpp  smatrix$.i  smatrix.hpp  vector$.hpp  vector$.i  vector.hpp  vectors.h  vectors.hpp
MyRenderer/kamanri/renderer/: a_window.hpp  all.hpp  cameras.h  cameras.hpp  obj_model$.hpp  obj_model$.i  obj_model.hpp  obj_reader.h  obj_reader.hpp  tga_image$.hpp  tga_image$.i  tga_image.hpp  triangle3ds.h  triangle3ds.hpp  world.i  world3ds.h  world3ds.hpp
MyRenderer/kamanri/renderer/world/: all.hpp  bling_phong_reflection_model.hpp  blinn_phong_reflection_model$.hpp  blinn_phong_reflection_model$.i  blinn_phong_reflection_model.hpp  camera$.hpp  camera$.i  camera.hpp  frame_buffer.hpp  object.hpp  world3d$.hpp  world3d$.i  world3d.hpp
MyRenderer/kamanri/renderer/world/__/: all.hpp  bounding_box.hpp  buffers.hpp  configs.hpp  environment.hpp  frame_buffer.hpp  resources.hpp  triangle3d.hpp
MyRenderer/kamanri/utils/: all.hpp  array_stack.hpp  cuda.hpp  delegate.hpp  imexport.hpp  iterator.hpp  list.hpp  log$.i  log.hpp  logs.hpp  logs_declare.hpp  memory.h  memory.hpp  range.hpp  resource_pool.hpp  result.hpp  result_declare.hpp  string.hpp  thread.hpp
MyRenderer/kamanri/window_procedures/: all.hpp  window.hpp  wingdi_window.i
MyRenderer/kamanri/window_procedures/wingdi_window/: all.hpp  move_position_procedure.hpp  update_procedure.hpp
MyRenderer/kamanri/windows/: all.hpp  painter.hpp  painter_factor.hpp  window.hpp  windows.h  windows.hpp  wingdi_window$.hpp  wingdi_window$.i  wingdi_window.hpp
MyRenderer/sbin/: build_swig_python.bat  build_swig_python.py  clean.bat  cmake_build.bat  ms_build.bat  run.bat
PyMyRenderer/: .gitignore  main.py
PyMyRenderer/sbin/: clean.bat  import_pyd.bat
docs/: The_essence_of_rasterization.md  intro.md  logs.md
